--- a/package.json
+++ b/package.json
@@ -9,15 +9,25 @@
   "dependencies": {
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "core-js": "^2.6.5",
+    "dns": "^0.2.2",
+    "element-ui": "^2.11.1",
+    "module": "^1.2.5",
+    "mongodb": "^3.3.0-beta2",
+    "mongoose": "^5.6.8",
     "swiper": "^4.5.0",
+    "vant": "^2.1.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-touch": "^2.0.0-beta.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
+    "express": "^4.17.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
